--- a/src/components/board/BoardSpot.module.css
+++ b/src/components/board/BoardSpot.module.css
@@ -35,6 +35,7 @@
   justify-content: center;
   gap: 1px;
   padding: 1px;
+  z-index: 1;
 }
 
 .icon {
